--- a/package.json
+++ b/package.json
@@ -27,8 +27,9 @@
         "copy:demo": "cp -rf demo dist && NODE_ENV=production postcss vendors/tailwind@1.1.4/tailwind.css -o dist/demo/styles.css",
         "dev": "npm run copy && webpack --mode development",
         "dev-server": "npm run copy && webpack-dev-server",
+        "build": "npm run copy && webpack --mode production && npm run export",
         "export": "react-snap",
-        "build": "npm run copy && webpack --mode production && npm run export"
+        "deploy": "npm run build && netlify deploy --dir=dist --prod"
     },
     "dependencies": {
         "@loadable/component": "^5.12.0",
