--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     },
     "dependencies": {
         "@loadable/component": "^5.12.0",
+        "babel-plugin-module-resolver": "^4.0.0",
         "highlight.js": "^9.17.1",
         "react": "^16.12.0",
         "react-dom": "^16.12.0",
