--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,10 @@
         "module": "esnext",
         "moduleResolution": "node",
         "target": "esnext",
-        "jsx": "react"
+        "jsx": "react",
+        "baseUrl": "./client",
+        "paths": {
+          "#components/*": ["components/*"],
+        }
     }
 }
